@@ -2,7 +2,6 @@ package forge.screens.online;
 
 import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.utils.Align;
-import com.google.common.collect.ImmutableList;
 
 import forge.Forge;
 import forge.assets.FSkinColor;
@@ -27,6 +26,8 @@ import forge.screens.online.OnlineMenu.OnlineScreen;
 import forge.toolbox.FButton;
 import forge.toolbox.FLabel;
 import forge.util.Utils;
+
+import java.util.List;
 
 public class OnlineLobbyScreen extends LobbyScreen implements IOnlineLobby {
 
@@ -102,7 +103,7 @@ public class OnlineLobbyScreen extends LobbyScreen implements IOnlineLobby {
         Forge.back();
         if (msg.length() > 0) {
             FThreads.invokeInBackgroundThread(() -> {
-                final boolean callBackAlwaysTrue = SOptionPane.showOptionDialog(msg, Forge.getLocalizer().getMessage("lblError"), FSkinProp.ICO_WARNING, ImmutableList.of(Forge.getLocalizer().getMessage("lblOK")), 1) == 0;
+                final boolean callBackAlwaysTrue = SOptionPane.showOptionDialog(msg, Forge.getLocalizer().getMessage("lblError"), FSkinProp.ICO_WARNING, List.of(Forge.getLocalizer().getMessage("lblOK")), 1) == 0;
                 if (callBackAlwaysTrue) { //to activate online menu popup when player press play online
                     GuiBase.setInterrupted(false);
 
